@@ -30,6 +30,9 @@ useful data structures.
 
 %changelog
 
+* Tue Jun  1 1999 Jose Mercado <jmercado@mit.edu>
+- fixed version numbers in files section.
+
 * Thu Feb 11 1999 Michael Fulbright <drmike@redhat.com>
 - added libgthread to file list
 
@@ -74,9 +77,9 @@ rm -rf $RPM_BUILD_ROOT
 %defattr(-, root, root)
 
 %doc AUTHORS COPYING ChangeLog NEWS README
-%{prefix}/lib/libglib-1.1.so.*
-%{prefix}/lib/libgthread-1.1.so.*
-%{prefix}/lib/libgmodule-1.1.so.*
+%{prefix}/lib/libglib-1.3.so.*
+%{prefix}/lib/libgthread-1.3.so.*
+%{prefix}/lib/libgmodule-1.3.so.*
 
 %files devel
 %defattr(-, root, root)
